[package]
name = "paperupdate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["default", "blocking", "json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
sha256 = "1.4.0"
hex = { version = "0.4.3", features = [] }
data-encoding = "2.4.0"
ring = "0.17.0-alpha.11"
serde_yaml = "0.9.25"